fix: infinite resource updates due to canonical format conversion of resource requirements (#2568)
* refactor: clean up SSABasedGenericKubernetesResourceMatcher

Signed-off-by: David Sondermann <david.sondermann@hivemq.com>

* test: add missing tests for StatefulSet with VolumeClaimTemplates for SSABasedGenericKubernetesResourceMatcher

Signed-off-by: David Sondermann <david.sondermann@hivemq.com>

* fix: Fix infinite resource updates due to canonical format conversion of resource requirements

Signed-off-by: David Sondermann <david.sondermann@hivemq.com>

* test: Add test cases with init containers to ResourceRequirementsSanitizerTest

Signed-off-by: David Sondermann <david.sondermann@hivemq.com>

* refactor: fix import order

Signed-off-by: David Sondermann <david.sondermann@hivemq.com>

---------

Signed-off-by: David Sondermann <david.sondermann@hivemq.com>